# motion-android

./: configure.ac
src/: Makefile.am  conf.c  event.c  logger.c  logger.h  motion.c  motion.h  netcam_rtsp.c  track.c
